--- a/xwiki-restserver-api/pom.xml
+++ b/xwiki-restserver-api/pom.xml
@@ -58,6 +58,24 @@
           <groupId>commons-logging</groupId>
           <artifactId>commons-logging</artifactId>
         </exclusion>
+        <!-- Ignore this and use xwiki common managed version for httpclient -->
+        <exclusion>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+        </exclusion>
+        <!-- Use only undertow from standalone -->
+        <exclusion>
+          <groupId>io.undertow</groupId>
+          <artifactId>undertow-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.undertow</groupId>
+          <artifactId>undertow-servlet-jakarta</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.undertow</groupId>
+          <artifactId>undertow-servlet</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <!-- JSON marshalling for RESTEasy -->
@@ -65,6 +83,10 @@
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-jackson2-provider</artifactId>
       <version>${resteasy.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
     </dependency>
   </dependencies>
 </project>
